SUBDIRS = drivers

AM_CPPFLAGS = -fPIC -Wall -D PLAYER_INSTALL_PREFIX="\"@PREFIX@\"" @GAZEBO_EXTRA_CPPFLAGS@ -I$(srcdir)/drivers/stage -I$(srcdir)/drivers/gazebo -I$(srcdir)/drivers/shell -I$(top_srcdir)/replace

if INCLUDE_RTKGUI
RTKGUI_LIBS=-L$(top_builddir)/rtk2 -lrtk @GTK_LIBS@
else
RTKGUI_LIBS=
endif

# create the pkg-config entry for the server headers
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = player.pc

player_DEPENDENCIES =   @PLAYER_DRIVER_LIBPATHS@

#
# Note to everybody: please do NOT break the following assignment onto
# separate lines with backslashes.  It makes the link line look like shit and 
# hard to parse.  - BPG
#
player_LDADD   = -lm @PLAYER_DRIVER_LIBPATHS@ $(top_builddir)/client_libs/libplayerpacket/libplayerpacket.a @PLAYER_DRIVER_EXTRA_LIBS@ $(RTKGUI_LIBS) $(top_builddir)/replace/libreplace.a 

# We should be letting libtool handle figuring out the right linker flags.
# Why are we still specifying -export-dynamic here?
#player_LDFLAGS = -export-dynamic

#lib_LIBRARIES = libplayer.a

#libplayer_a_SOURCES = driver.cc driver.h \
#                      device.cc device.h \
#                      drivertable.h drivertable.cc \
#		      devicetable.h devicetable.cc \
#		      deviceregistry.cc deviceregistry.h \
#		      configfile.cc configfile.h \
#		      playercommon.h player.h playerconfig.h \
#		      error.h error.cc \
#		      message.h message.cc \
#		      wallclocktime.cc wallclocktime.h playertime.h

bin_PROGRAMS = player

player_SOURCES = clientdata.cc socket_util.cc \
		 clientmanager.cc main.cc \
                 clientdata.h clientmanager.h socket_util.h \
		 timer.cc timer.h  \
                 driver.cc driver.h \
                 device.cc device.h \
                 drivertable.h drivertable.cc \
		 devicetable.h devicetable.cc \
		 deviceregistry.cc deviceregistry.h \
		 configfile.cc configfile.h \
		 playercommon.h player.h playerconfig.h \
		 error.h error.cc \
		 message.h message.cc \
		 wallclocktime.cc wallclocktime.h playertime.h


# Install these to $prefix/include so clients and plugins can use them
include_HEADERS = player.h playerconfig.h playercommon.h

# Install these to $prefix/include/player/ so plugin drivers can use them
pkginclude_HEADERS = driver.h drivertable.h devicetable.h device.h configfile.h playertime.h error.h message.h clientdata.h clientmanager.h


#
# distribute playerconfig.h.in, but NOT playerconfig.h, which is autogenerated
# by configure.  In later versions of Automake, you can use a
# nodist_player_SOURCES, but that doesn't work with the version we're using.
#
EXTRA_DIST = playerconfig.h.in 

dist-hook:
	rm -f $(distdir)/playerconfig.h

