MESSAGE (STATUS "===== Player utilities =====")
ADD_SUBDIRECTORY (dgps_server)
ADD_SUBDIRECTORY (logsplitter)
ADD_SUBDIRECTORY (playercam)
ADD_SUBDIRECTORY (playerjoy)
ADD_SUBDIRECTORY (playernav)
ADD_SUBDIRECTORY (playerprint)
ADD_SUBDIRECTORY (playerprop)
ADD_SUBDIRECTORY (playerv)
ADD_SUBDIRECTORY (playervcr)
ADD_SUBDIRECTORY (playerwritemap)
ADD_SUBDIRECTORY (pmap)
ADD_SUBDIRECTORY (xmms-plugin)