OPTION (BUILD_UTILS "Build the various utilities" ON)
MESSAGE (STATUS "===== Player utilities =====")
IF (BUILD_UTILS)
    ADD_SUBDIRECTORY (dgps_server)
    ADD_SUBDIRECTORY (logsplitter)
    ADD_SUBDIRECTORY (playercam)
    ADD_SUBDIRECTORY (playerjoy)
    ADD_SUBDIRECTORY (playernav)
    ADD_SUBDIRECTORY (playerprint)
    ADD_SUBDIRECTORY (playerprop)
    ADD_SUBDIRECTORY (playerv)
    ADD_SUBDIRECTORY (playervcr)
    ADD_SUBDIRECTORY (playerwritemap)
    ADD_SUBDIRECTORY (pmap)
    ADD_SUBDIRECTORY (xmms-plugin)
ELSE (BUILD_UTILS)
    MESSAGE (STATUS "Disabled by user. Use ccmake to enable.")
ENDIF (BUILD_UTILS)
MESSAGE (STATUS "============================")
